--- a/build.xml
+++ b/build.xml
@@ -95,4 +95,9 @@
             </fileset>
         </tar>
     </target>
+
+    <target name="support">
+        <preprocess config="rebuild.readme.xml"/>
+    </target>
+
 </project>
